mesh selection issues, once blend is loaded second time in a Blender session #68055

Closed
opened 2019-08-01 11:16:09 +02:00 by MACHIN3 · 9 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.81 (sub 0), branch: master, commit date: 2019-07-30 20:50, hash: 5359b7a033

Short description of error
I'm seeing very odd selection issues, where some faces can't seem to be selected and the selection goes through the mesh to the other side. Normal(click) selection as well as circle and box select are affected. I don't think it's related to the blend file or the objects/meshes. It's a fresh startup file with just the two objects added.
Most unusual is, how the issue only starts presenting itself, once the blend is loaded the second time in the same Blender session.

video demo

mesh_selection_issues.blend

Exact steps for others to reproduce the error

  • open the blend
  • start selecting geometry on either object's mesh, everything should work as expected
  • load the same blend again, and try selecting the mesh geometry again
  • some faces should resist being selected and faces on the other side should select
  • turn the view and now other faces shold be (un)selectable
**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.81 (sub 0), branch: master, commit date: 2019-07-30 20:50, hash: `5359b7a033` **Short description of error** I'm seeing very odd selection issues, where some faces can't seem to be selected and the selection goes through the mesh to the other side. Normal(click) selection as well as circle and box select are affected. I don't think it's related to the blend file or the objects/meshes. It's a fresh startup file with just the two objects added. Most unusual is, how the issue only starts presenting itself, once the blend is loaded the second time in the same Blender session. [video demo ](https://www.youtube.com/watch?v=UtKCpdWNBlI) [mesh_selection_issues.blend](https://archive.blender.org/developer/F7641299/mesh_selection_issues.blend) **Exact steps for others to reproduce the error** * open the blend * start selecting geometry on either object's mesh, everything should work as expected * load the same blend again, and try selecting the mesh geometry again * some faces should resist being selected and faces on the other side should select * turn the view and now other faces shold be (un)selectable
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

#68020 was marked as duplicate of this issue

#68020 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Can confirm, checking...
Germano Cavalcante was assigned by Philipp Oeser 2019-08-01 11:52:03 +02:00
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

@mano-wii: looks like this started with 651d8bfd98, mind checking?
note: I can see transform values of seemingly selected faces still update in the sidebar, but at least the viewport seems to not update...

@mano-wii: looks like this started with 651d8bfd98, mind checking? note: I can see transform values of seemingly selected faces still update in the sidebar, but at least the viewport seems to not update...

Added subscriber: @Mobin.artworks

Added subscriber: @Mobin.artworks

This issue was referenced by eb7fe7546c

This issue was referenced by eb7fe7546c1410f3cd82298491edcae3a3e70c1d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68055
No description provided.