Fix T68055: mesh selection issues, once blend is loaded second time in a Blender session

The depth attachment of the framebuffer was missing.